--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cypherlab/react-starter-kit",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "React Starter Kit",
   "author": "Louis Grellet <louis.grellet@gmail.com>",
   "license": "ISC",
@@ -9,7 +9,7 @@
   "module": "src/index.js",
   "main": "dist/index.js",
   "scripts": {
-    "kit": "npx babel-node scripts/kit.js --ack",
+    "kit": "npx babel-node scripts/kit.js --ack --clean",
     "dry": "npx babel-node scripts/kit.js",
     "watch": "npx rollup -c -w",
     "dev": "NODE_ENV=dev npm run watch",
