--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cypherlab/react-starter-kit",
   "version": "0.0.9",
-  "description": "React Starter Kit",
+  "description": "📦 React Starter Kit",
   "author": "Louis Grellet <louis.grellet@gmail.com>",
   "license": "ISC",
   "repository": "https://github.com/cypherlab/react-starter-kit",
